--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     }
   },
   "dependencies": {
-    "@103cuong/thinid": "git+ssh://git@github.com/103cuong/thinid",
-    "giin": "https://github.com/103cuong/giin",
-    "juno-js": "git+ssh://git@github.com:103cuong/juno.git",
+    "@103cuong/thinid": "git+ssh://git@github.com/103cuong/thinid.git",
+    "giin": "https://github.com/103cuong/giin.git",
+    "juno-js": "git+ssh://git@github.com:103cuong/juno-private.git",
     "viee": "^0.5.1"
   },
   "devDependencies": {
