--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@103cuong/thinid": "git+ssh://git@github.com/103cuong/thinid.git",
     "giin": "https://github.com/103cuong/giin.git",
-    "juno-js": "git+ssh://git@github.com:103cuong/juno-private.git",
+    "juno-js": "git+ssh://git@github.com:103z/juno.git",
     "viee": "^0.5.1"
   },
   "devDependencies": {
